Fixes z-index issue on fixed notices

--- a/src/assets/scss/ui/_base.scss
+++ b/src/assets/scss/ui/_base.scss
@@ -322,6 +322,7 @@ figure{
 		position:fixed;
 		top:0;
 		left:0;
+		z-index:999;
 		width:100%;
 		border-top:none;
 		border-left:none;
